# Ember

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: stability-check.yml
config/: default.toml
migrations/: 001_initial.sql
pkg/: PKGBUILD  ember-notify-0.1.0-1-x86_64.pkg.tar.zst  ember-notify-0.1.0-2-x86_64.pkg.tar.zst  ember-notify-debug-0.1.0-1-x86_64.pkg.tar.zst  ember-notify-debug-0.1.0-2-x86_64.pkg.tar.zst  ember-notify.install  ember.service
pkg/pkg/ember-notify/: .BUILDINFO  .MTREE  .PKGINFO
pkg/pkg/ember-notify-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/pkg/ember-notify/usr/share/ember/: default.toml
pkg/src/Ember-0.1.0/: .gitignore
pkg/src/Ember-0.1.0/.github/workflows/: stability-check.yml
pkg/src/Ember-0.1.0/man/: ember.1
pkg/src/Ember-0.1.0/src/: config.rs  main.rs
pkg/src/Ember-0.1.0/src/core/: engine.rs  focus.rs
pkg/src/Ember-0.1.0/src/ctl/: mod.rs
pkg/src/Ember-0.1.0/src/ipc/: api.rs
pkg/src/Ember-0.1.0/src/store/: mod.rs  models.rs  sqlite.rs
pkg/src/Ember-0.1.0/src/toast/: animation.rs  icon.rs  layout.rs  renderer.rs  theme.rs
pkg/src/Ember-0.1.0/src/ui_contract/: dto.rs
pkg/src/cargo-home/: .global-cache
scripts/: deploy-archlinux.sh  smoke-ipc.sh
src/: config.rs  main.rs  sound.rs
src/adapters/: kdeconnect_sms.rs  mod.rs  telegram.rs
src/core/: actions.rs  engine.rs  grouping.rs  mod.rs  replies.rs  rules.rs  shortcuts.rs
src/dbus/: client.rs  server.rs
src/input/: keyboard.rs  mouse.rs
src/ipc/: socket.rs
src/store/: memory.rs
src/toast/: mod.rs  renderer.rs
(+27 files in other folders)
